--- a/TP2-V2/index.html
+++ b/TP2-V2/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,86 +7,59 @@
     <link rel="stylesheet" href="styles/styles.css">
     <title>TP2</title>
 </head>
-
 <body>
-
-    <div class="Gradient">
-
-        <header>
-            <div class="logo">
-                <a href="index.html">
-                    <div class="ico">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" viewBox="0 0 24 24" fill="none"
-                            stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                            <rect x="3" y="3" width="7" height="7"></rect>
-                            <rect x="14" y="3" width="7" height="7"></rect>
-                            <rect x="14" y="14" width="7" height="7"></rect>
-                            <rect x="3" y="14" width="7" height="7"></rect>
-                        </svg>
-                    </div>
-                    <div class="title">
-                        <h1>Square</h1>
-                    </div>
-                </a>
-            </div>
-            <div class="pages">
-                <a href="#">
-                    <div class="page">Solutions</div>
-                </a>
-                <a href="#">
-                    <div class="page">Prix</div>
-                </a>
-                <a href="#">
-                    <div class="page">Expériences</div>
-                </a>
-            </div>
-            <div class="connexion">
-                <a href="#" id="Boutton">Se connecter</a>
-            </div>
-        </header>
-
-        <div class="grandpapa">
-            <div class="papa">
-                <div class="gauche">
-                    <div class="welcome">
-                        Faire mieux
-                        <h2>Créer de la musique</h2>
-                        <p class="texte">Notre société propose de créer des musiques. Vous avez besoin d'un carré, d'un
-                            producteur, ou même d'un ingénieur du son ?</p>
-                        <p class="texte">Nous avons l'ensemble des outils pour répondre à l'ensemble de vos besoins.</p>
-                    </div>
-
-                    <div class="demflex">
-                        <div class="minion1">
-                            <a href="#bas">Demo</a>
-                        </div>
-                        <div class="minion2">
-                            <a href="#">S'inscrire</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="droite">
-                <div class="svg">
-                    <img src="img/Music.svg" alt="Guitare">
-                </div>
-            </div>
+    <!--Début du Header-->
+    <header>
+        <div class="logo">
+        <a href="#">
+        <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="3" width="7" height="7"></rect><rect x="14" y="3" width="7" height="7"></rect><rect x="14" y="14" width="7" height="7"></rect><rect x="3" y="14" width="7" height="7"></rect></svg>
+        Square</a>
         </div>
 
-    </div>
+        <nav class="onglets">
+            <a href="#" class="onglet">Solutions</a>
+            <a href="#" class="onglet">Prix</a>
+            <a href="#" class="onglet">Expériences</a>
+        </nav>
 
-    <div class="background">
-    <div class="cercle" id="bas">
-    </div>
-    </div>
+        <a href="#"><button class="connexion">Se connecter</button></a>
+    
+    </header>
+    <!--Fin du Header-->
 
-<div class="footer">
-    <a href="" class="mention"></a>
-    <a href="" class="mention"></a>
-    <a href="" class="mention"></a>
-</div>
+    <!--Premier block du site-->
+    <section class="contenu1">
+        <div class="gauche">
+            Faire mieux
+            <h1>Construire des Formes</h1>
+            <p>Notre société propose des formes. Vous avez besoin d'un carré, d'un cercle, ou même d'un triangle ?</p>
+            <p>Nous avons l'ensemble des outils pour répondre à l'ensemble de vos besoins</p>
+            <a href="#cercle"><button class="slide">Démo</button></a>
+            <button class="inscription">S'inscrire</button>
+        </div>
+        <div class="droite">
+            <img src="img/data.svg" alt="Circles" title="Rejoignez nous !">
+        </div>
+    </section>
+    <!--Fin Premier block du site-->
 
+    <!--Deuxième block du site-->
+
+    <section class="contenu2">
+        <div class="cercle" id="cercle"></div>
+    </section>
+    <footer>
+        <div class="form">
+        <p>mentions légales</p>
+        <p>Nous contacter</p>
+        <p>Nous trouver</p>
+        </div>
+        <div class="logo">
+            <a href="#">
+                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="3" width="7" height="7"></rect><rect x="14" y="3" width="7" height="7"></rect><rect x="14" y="14" width="7" height="7"></rect><rect x="3" y="14" width="7" height="7"></rect></svg>
+             <span>Square</span></a>
+            </div>
+    </footer>
+    <!--Fin Deuxième block du site-->
 </body>
-
 </html>
