--- a/TP2-V2/index.html
+++ b/TP2-V2/index.html
@@ -13,7 +13,7 @@
         <div class="logo">
         <a href="#">
         <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="3" width="7" height="7"></rect><rect x="14" y="3" width="7" height="7"></rect><rect x="14" y="14" width="7" height="7"></rect><rect x="3" y="14" width="7" height="7"></rect></svg>
-        Square</a>
+        <b>Square</b></a>
         </div>
 
         <nav class="onglets">
