--- a/TP2-V2/index.html
+++ b/TP2-V2/index.html
@@ -61,5 +61,7 @@
             </div>
     </footer>
     <!--Fin Deuxième block du site-->
+
+    <script>alert("Bienvenue sur mon super site !")</script>
 </body>
 </html>
