--- a/S2/E-Portfolio (SAE)/index.html
+++ b/S2/E-Portfolio (SAE)/index.html
@@ -27,7 +27,10 @@
     </header>
 
     <h1>Welcome To My World</h1>
-    <h2>Enter The Wired</h2>
+
+    <div class="enterwired">
+        <h2>Enter The Wired</h2>
+    </div>
 
     <script src="/js/index.js"></script>
 </body>
