--- a/S2/E-Portfolio (SAE)/index.html
+++ b/S2/E-Portfolio (SAE)/index.html
@@ -26,10 +26,14 @@
         </nav>
     </header>
 
-    <h1>Welcome To My World</h1>
-
     <div class="enterwired">
-        <h2>Enter The Wired</h2>
+        <h1>Enter The Wired</h1>
+
+        <div class="arrow">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </div>
 
     <script src="/js/index.js"></script>
