--- a/S2/E-Portfolio (SAE)/index.html
+++ b/S2/E-Portfolio (SAE)/index.html
@@ -27,7 +27,7 @@
     </header>
 
     <div class="enterwired">
-        <h1>Enter The Wired</h1>
+        <h1 class="enteranim">Enter The Wired</h1>
 
         <div class="arrow">
             <span></span>
