--- a/S2/E-Portfolio (SAE)/index.html
+++ b/S2/E-Portfolio (SAE)/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/stylesheet.css">
+    <link rel="stylesheet" href="./css/stylesheet.css">
     <title>ALEX ECKES</title>
 </head>
 
 <body>
     <div class="back-vid">
         <video autoplay loop muted plays-inline class="back-vid">
-            <source src="/img/video/back-vid-1.mp4" type="video/mp4">
+            <source src="./img/video/back-vid-1.mp4" type="video/mp4">
         </video>
     </div>
 
@@ -36,7 +36,7 @@
         </div>
     </div>
 
-    <script src="/js/index.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
