--- a/S2/E-Portfolio SAE202/index.html
+++ b/S2/E-Portfolio SAE202/index.html
@@ -16,6 +16,10 @@
         </video>
     </div>
 
+    
+    <canvas id="canvas">Canvas is not supported in your browser.</canvas>
+    <canvas id="canvas2">Canvas is not supported in your browser.</canvas>
+
     <header>
         <nav>
             <ul>
@@ -26,6 +30,7 @@
         </nav>
     </header>
 
+    //First Section Of The Website
     <div class="enterwired">
         <h1 class="enteranim">Enter The Wired</h1>
 
@@ -34,6 +39,11 @@
             <span></span>
             <span></span>
         </div>
+    </div>
+
+    //Second Section Of The Website
+    <div class="page_show">
+        
     </div>
 
     <script src="./js/index.js"></script>
