--- a/S2/E-Portfolio SAE202/index.html
+++ b/S2/E-Portfolio SAE202/index.html
@@ -30,7 +30,7 @@
         </nav>
     </header>
 
-    //First Section Of The Website
+<!-- First Section Of The Website -->
     <div class="enterwired">
         <h1 class="enteranim">Enter The Wired</h1>
 
@@ -41,7 +41,7 @@
         </div>
     </div>
 
-    //Second Section Of The Website
+<!-- Second Section Of The Website -->
     <div class="page_show">
         
     </div>
