--- a/S2/E-Portfolio SAE202/index.html
+++ b/S2/E-Portfolio SAE202/index.html
@@ -46,6 +46,8 @@
         
     </div>
 
+<!-- Mettre un filtre par semestre et par compétence et en bas mettre les résultats des SAE -->
+
     <script src="./js/index.js"></script>
 </body>
 
