--- a/S2/E-Portfolio SAE202/index.html
+++ b/S2/E-Portfolio SAE202/index.html
@@ -23,9 +23,9 @@
     <header>
         <nav>
             <ul>
-                <li>SAÉ</li>
-                <li>ABOUT</li>
-                <li>CONTACT</li>
+                <li><a href="sae.html" id="sae">SAÉ</a></li>
+                <li><a href="about.html">ABOUT</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
     </header>
@@ -42,11 +42,14 @@
     </div>
 
 <!-- Second Section Of The Website -->
+<!-- Mettre un filtre par semestre et par compétence et en bas mettre les résultats des SAE -->
     <div class="page_show">
-        
+        <h2>AAHHAHAHAHA</h2>
+        <div id="sae">
+            <h1>AGOUGAGAGAGAGAGAGAGAGAGGAGAGAGA</h1>
+        </div>
     </div>
 
-<!-- Mettre un filtre par semestre et par compétence et en bas mettre les résultats des SAE -->
 
     <script src="./js/index.js"></script>
 </body>
