--- a/S2/E-Portfolio SAE202/index.html
+++ b/S2/E-Portfolio SAE202/index.html
@@ -20,16 +20,6 @@
     <canvas id="canvas">Canvas is not supported in your browser.</canvas>
     <canvas id="canvas2">Canvas is not supported in your browser.</canvas>
 
-    <header>
-        <nav>
-            <ul>
-                <li><a href="sae.html" id="sae">SAÉ</a></li>
-                <li><a href="about.html">ABOUT</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
-            </ul>
-        </nav>
-    </header>
-
 <!-- First Section Of The Website -->
     <div class="enterwired">
         <h1 class="enteranim">Enter The Wired</h1>
@@ -44,9 +34,12 @@
 <!-- Second Section Of The Website -->
 <!-- Mettre un filtre par semestre et par compétence et en bas mettre les résultats des SAE -->
     <div class="page_show">
-        <h2>AAHHAHAHAHA</h2>
         <div id="sae">
-            <h1>AGOUGAGAGAGAGAGAGAGAGAGGAGAGAGA</h1>
+            <ul>
+                <li><a href="sae.html" class="choice" id="sae">SAÉ</a></li>
+                <li><a href="about.html" class="choice">ABOUT</a></li>
+                <li><a href="contact.html" class="choice">CONTACT</a></li>
+            </ul>
         </div>
     </div>
 
