--- a/S2/E-Portfolio SAE202/index.html
+++ b/S2/E-Portfolio SAE202/index.html
@@ -18,7 +18,7 @@
 
     
     <canvas id="canvas">Canvas is not supported in your browser.</canvas>
-    <canvas id="canvas2">Canvas is not supported in your browser</canvas>
+    <canvas id="canvas2">Canvas is not supported in your browser.</canvas>
 
 <!-- First Section Of The Website -->
     <div class="enterwired">
