--- a/S2/E-Portfolio SAE202/about.html
+++ b/S2/E-Portfolio SAE202/about.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/sae.css">
-    <title>SAE</title>
+    <title>About</title>
 </head>
 <body>
     <div class="page_show">
-
+        About Page
         </div>
