--- a/S2/E-Portfolio SAE202/sae.html
+++ b/S2/E-Portfolio SAE202/sae.html
@@ -24,12 +24,16 @@
         </div>
         
         <main>
-            <div class="S1">S1</div>
-            <div class="S1">S1</div>
-            <div class="S2">S2</div>
-            <div class="S2">S2</div>
-            <div class="S3">S3</div>
-            <div class="S3">S3</div>
+            <div class="S1 SAE101">SAE1.01</div>
+            <div class="S1 SAE102">SAE1.02</div>
+            <div class="S1 SAE103">SAE1.03</div>
+            <div class="S1 SAE104">SAE1.04</div>
+            <div class="S1 SAE105">SAE1.05</div>
+            <div class="S1 SAE106">SAE1.06</div>
+            <div class="S2">SAE2.01</div>
+            <div class="S2">SAE2.02</div>
+            <div class="S2">SAE2.03</div>
+            <div class="S2">SAE2.04</div>
         </main>
     </div>
     
