--- a/S2/E-Portfolio SAE202/about.html
+++ b/S2/E-Portfolio SAE202/about.html
@@ -14,6 +14,9 @@
         <h1>About Page</h1>
     </div>
 
+    <canvas id="canvas">Canvas is not supported in your browser.</canvas>
+    <canvas id="canvas2">Canvas is not supported in your browser.</canvas>
+    
     <!-- Smoke Background
     <div class="smokebg">
         <style>
