--- a/S2/E-Portfolio SAE202/contact.html
+++ b/S2/E-Portfolio SAE202/contact.html
@@ -10,6 +10,10 @@
 </head>
 
 <body>
+    <!-- For Matrix BG -->
+    <canvas id="canvas">Canvas is not supported in your browser.</canvas>
+    <canvas id="canvas2">Canvas is not supported in your browser.</canvas>
+
     <div class="page_show">
         Contact Page
     </div>
