--- a/S2/E-Portfolio SAE202/index.html
+++ b/S2/E-Portfolio SAE202/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/stylesheet.css">
+    <link rel="stylesheet" href="./css/index.css">
     <title>ALEX ECKES</title>
 </head>
 
@@ -16,7 +16,7 @@
         </video>
     </div>
 
-    
+    <!-- For Matrix BG -->
     <canvas id="canvas">Canvas is not supported in your browser.</canvas>
     <canvas id="canvas2">Canvas is not supported in your browser.</canvas>
 
