--- a/S2/E-Portfolio SAE202/about.html
+++ b/S2/E-Portfolio SAE202/about.html
@@ -10,14 +10,16 @@
 </head>
 
 <body>
-    <div class="page_show">
-        <h1>About Page</h1>
-    </div>
-
+    <!-- For Matrix BG -->
     <canvas id="canvas">Canvas is not supported in your browser.</canvas>
     <canvas id="canvas2">Canvas is not supported in your browser.</canvas>
-    
-    <!-- Smoke Background
+
+    <div class="page_show">
+        <h1>ABOUT ME</h1>
+
+        <p>My name is Alex, I'm a French student of the UIT of Mulhouse</p>
+    </div>
+        <!-- Smoke Background
     <div class="smokebg">
         <style>
             * {
@@ -150,7 +152,23 @@
             </script>
     </div> -->
 
-    <script src="./js/index.js"></script>
+        <!-- Footer -->
+        <footer>
+            <div class="rounded-social-buttons">
+                <a class="social-button facebook" href="https://www.facebook.com/" target="_blank"><i
+                        class="fab fa-facebook-f"></i></a>
+                <a class="social-button twitter" href="https://www.twitter.com/" target="_blank"><i
+                        class="fab fa-twitter"></i></a>
+                <a class="social-button linkedin" href="https://www.linkedin.com/" target="_blank"><i
+                        class="fab fa-linkedin"></i></a>
+                <a class="social-button youtube" href="https://www.youtube.com/" target="_blank"><i
+                        class="fab fa-youtube"></i></a>
+                <a class="social-button instagram" href="https://www.instagram.com/" target="_blank"><i
+                        class="fab fa-instagram"></i></a>
+            </div>
+        </footer>
+
+    <script src="./js/sae.js"></script>
 </body>
 
 </html>
