--- a/S2/E-Portfolio SAE202/contact.html
+++ b/S2/E-Portfolio SAE202/contact.html
@@ -18,7 +18,7 @@
         Contact Page
     </div>
 
-    <script src="./js/index.js"></script>
+    <script src="./js/sae.js"></script>
 </body>
 
 </html>
