--- a/S2/E-Portfolio SAE202/sae.html
+++ b/S2/E-Portfolio SAE202/sae.html
@@ -16,31 +16,41 @@
 
     <div class="page_show">
 
+        <h1>SAE's List</h1>
+
         <div class="zoneFiltres">
             <input type="checkbox" name="FiltreS1" id="S1">
+            <span class="checkmark"></span>
             <label for="S1">S1</label>
 
             <input type="checkbox" name="FiltreS2" id="S2">
+            <span class="checkmark"></span>
             <label for="S2">S2</label>
 
             <input type="checkbox" name="FiltreS3" id="S3">
+            <span class="checkmark"></span>
             <label for="S3">S3</label>
 
             <input type="checkbox" name="FiltreS4" id="S4">
+            <span class="checkmark"></span>
             <label for="S4">S4</label>
         </div>
 
         <main>
-            <div class="S1 SAE101">SAE1.01</div>
-            <div class="S1 SAE102">SAE1.02</div>
-            <div class="S1 SAE103">SAE1.03</div>
-            <div class="S1 SAE104">SAE1.04</div>
-            <div class="S1 SAE105">SAE1.05</div>
-            <div class="S1 SAE106">SAE1.06</div>
-            <div class="S2">SAE2.01</div>
-            <div class="S2">SAE2.02</div>
-            <div class="S2">SAE2.03</div>
-            <div class="S2">SAE2.04</div>
+            <div class="carousel">
+                <div class="S1 SAE SAE101">SAE1.01</div>
+                <div class="S1 SAE SAE102">SAE1.02</div>
+                <div class="S1 SAE SAE103">SAE1.03</div>
+                <div class="S1 SAE SAE104">SAE1.04</div>
+                <div class="S1 SAE SAE105">SAE1.05</div>
+                <div class="S1 SAE SAE106">SAE1.06</div>
+                <div class="S2 SAE SAE201">SAE2.01</div>
+                <div class="S2 SAE SAE202">SAE2.02</div>
+                <div class="S2 SAE SAE203">SAE2.03</div>
+                <div class="S2 SAE SAE204">SAE2.04</div>
+
+                
+            </div>
         </main>
     </div>
 
