--- a/S2/E-Portfolio SAE202/sae.html
+++ b/S2/E-Portfolio SAE202/sae.html
@@ -17,6 +17,7 @@
     <div class="page_show">
 
         <h1>SAE's List</h1>
+        <div id="output"></div>
 
         <div class="zoneFiltres">
             <input type="checkbox" name="FiltreS1" id="S1">
@@ -48,8 +49,13 @@
                 <div class="S2 SAE SAE202">SAE2.02</div>
                 <div class="S2 SAE SAE203">SAE2.03</div>
                 <div class="S2 SAE SAE204">SAE2.04</div>
-
-                
+            </div>
+            <div class="carousel-slide">
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24" fill="none"
+                stroke="#ffffff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                <circle cx="12" cy="12" r="10" />
+                <path d="M12 8l4 4-4 4M8 12h7" />
+            </svg>
             </div>
         </main>
     </div>
