--- a/S2/E-Portfolio SAE202/sae.html
+++ b/S2/E-Portfolio SAE202/sae.html
@@ -16,8 +16,19 @@
 
     <div class="page_show">
 
-        <h1>SAE's List</h1>
-        <div id="output"></div>
+        <h1>
+            <div class="text-animation">S</div>
+            <div class="text-animation">A</div>
+            <div class="text-animation">E</div>
+            <div class="text-animation">'</div>
+            <div class="text-animation">s</div>
+            <div class="space"></div>
+
+            <div class="text-animation">L</div>
+            <div class="text-animation">I</div>
+            <div class="text-animation">S</div>
+            <div class="text-animation">T</div>
+        </h1>
 
         <div class="zoneFiltres">
             <input type="checkbox" name="FiltreS1" id="S1">
