--- a/S2/E-Portfolio SAE202/sae.html
+++ b/S2/E-Portfolio SAE202/sae.html
@@ -17,17 +17,19 @@
     <div class="page_show">
 
         <h1>
-            <div class="text-animation">S</div>
-            <div class="text-animation">A</div>
-            <div class="text-animation">E</div>
-            <div class="text-animation">'</div>
-            <div class="text-animation">s</div>
-            <div class="space"></div>
+            <div class="decode-text">
+                <div class="text-animation">S</div>
+                <div class="text-animation">A</div>
+                <div class="text-animation">E</div>
+                <div class="text-animation">'</div>
+                <div class="text-animation">s</div>
+                <div class="space"></div>
 
-            <div class="text-animation">L</div>
-            <div class="text-animation">I</div>
-            <div class="text-animation">S</div>
-            <div class="text-animation">T</div>
+                <div class="text-animation">L</div>
+                <div class="text-animation">I</div>
+                <div class="text-animation">S</div>
+                <div class="text-animation">T</div>
+            </div>
         </h1>
 
         <div class="zoneFiltres">
@@ -63,10 +65,10 @@
             </div>
             <div class="carousel-slide">
                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24" fill="none"
-                stroke="#ffffff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-                <circle cx="12" cy="12" r="10" />
-                <path d="M12 8l4 4-4 4M8 12h7" />
-            </svg>
+                    stroke="#ffffff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                    <circle cx="12" cy="12" r="10" />
+                    <path d="M12 8l4 4-4 4M8 12h7" />
+                </svg>
             </div>
         </main>
     </div>
