--- a/S2/E-Portfolio SAE202/sae.html
+++ b/S2/E-Portfolio SAE202/sae.html
@@ -10,77 +10,69 @@
 </head>
 
 <body>
-    <!-- For Matrix BG -->
-    <canvas id="canvas">Canvas is not supported in your browser.</canvas>
-    <canvas id="canvas2">Canvas is not supported in your browser.</canvas>
-
     <div class="page_show">
 
         <div class="pageshow-wrapper">
             <h1>
-                <div class="decode-text">
-                    <div class="text">S</div>
-                    <div class="text">A</div>
-                    <div class="text">E</div>
-                    <div class="text">'</div>
-                    <div class="text">s</div>
-                    <div class="space"></div>
+                <div class="text">S</div>
+                <div class="text">A</div>
+                <div class="text">E</div>
+                <div class="text apo">'</div>
+                <div class="text">s</div>
+                <div class="space"></div>
 
-                    <div class="text">L</div>
-                    <div class="text">I</div>
-                    <div class="text">S</div>
-                    <div class="text">T</div>
-                </div>
+                <div class="text">L</div>
+                <div class="text">I</div>
+                <div class="text">S</div>
+                <div class="text">T</div>
             </h1>
 
             <div class="zoneFiltres">
-                <input type="checkbox" name="FiltreS1" id="S1">
-                <span class="checkmark"></span>
-                <label for="S1">Semestre 1</label>
+                <div class="filter-wrapper">
+                    <input type="checkbox" name="FiltreS1" id="S1">
+                    <label class="semestres" for="S1">Semestre 1</label>
 
-                <input type="checkbox" name="FiltreS2" id="S2">
-                <span class="checkmark"></span>
-                <label for="S2">Semestre 2</label>
+                    <input type="checkbox" name="FiltreS2" id="S2">
+                    <label class="semestres" for="S2">Semestre 2</label>
 
-                <input type="checkbox" name="FiltreS3" id="S3">
-                <span class="checkmark"></span>
-                <label for="S3">Semestre 3</label>
+                    <input type="checkbox" name="FiltreS3" id="S3">
+                    <label class="semestres" for="S3">Semestre 3</label>
 
-                <input type="checkbox" name="FiltreS4" id="S4">
-                <span class="checkmark"></span>
-                <label for="S4">Semestre 4</label>
-            </div>
-
-            <main>
-                <div class="carousel-slideL">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24" fill="none"
-                        stroke="#ffffff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-                        <circle cx="12" cy="12" r="10" />
-                        <path d="M12 8l4 4-4 4M8 12h7" />
-                    </svg>
+                    <input type="checkbox" name="FiltreS4" id="S4">
+                    <label class="semestres" for="S4">Semestre 4</label>
                 </div>
-                <div class="carousel">
-                    <div class="carousel-elements">
-                        <div class="S1 SAE SAE101">SAE1.01</div>
-                        <div class="S1 SAE SAE102">SAE1.02</div>
-                        <div class="S1 SAE SAE103">SAE1.03</div>
-                        <div class="S1 SAE SAE104">SAE1.04</div>
-                        <div class="S1 SAE SAE105">SAE1.05</div>
-                        <div class="S1 SAE SAE106">SAE1.06</div>
-                        <div class="S2 SAE SAE201">SAE2.01</div>
-                        <div class="S2 SAE SAE202">SAE2.02</div>
-                        <div class="S2 SAE SAE203">SAE2.03</div>
-                        <div class="S2 SAE SAE204">SAE2.04</div>
+
+                <main>
+                    <div class="carousel-slideL">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24" fill="none"
+                            stroke="#ffffff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                            <circle cx="12" cy="12" r="10" />
+                            <path d="M12 8l4 4-4 4M8 12h7" />
+                        </svg>
                     </div>
-                </div>
-                <div class="carousel-slideR">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24" fill="none"
-                        stroke="#ffffff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-                        <circle cx="12" cy="12" r="10" />
-                        <path d="M12 8l4 4-4 4M8 12h7" />
-                    </svg>
-                </div>
-            </main>
+                    <div class="carousel">
+                        <div class="carousel-elements">
+                            <div class="S1 SAE SAE101">SAE1.01</div>
+                            <div class="S1 SAE SAE102">SAE1.02</div>
+                            <div class="S1 SAE SAE103">SAE1.03</div>
+                            <div class="S1 SAE SAE104">SAE1.04</div>
+                            <div class="S1 SAE SAE105">SAE1.05</div>
+                            <div class="S1 SAE SAE106">SAE1.06</div>
+                            <div class="S2 SAE SAE201">SAE2.01</div>
+                            <div class="S2 SAE SAE202">SAE2.02</div>
+                            <div class="S2 SAE SAE203">SAE2.03</div>
+                            <div class="S2 SAE SAE204">SAE2.04</div>
+                        </div>
+                    </div>
+                    <div class="carousel-slideR">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24" fill="none"
+                            stroke="#ffffff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                            <circle cx="12" cy="12" r="10" />
+                            <path d="M12 8l4 4-4 4M8 12h7" />
+                        </svg>
+                    </div>
+                </main>
+            </div>
         </div>
     </div>
 
