--- a/S2/E-Portfolio SAE202/sae.html
+++ b/S2/E-Portfolio SAE202/sae.html
@@ -11,43 +11,29 @@
 
 <body>
     <div class="page_show">
+        <h1>
+            <div class="text">S</div>
+            <div class="text">A</div>
+            <div class="text">E</div>
+            <div class="text apo">'</div>
+            <div class="text">s</div>
+            <div class="space"></div>
+
+            <div class="text">L</div>
+            <div class="text">I</div>
+            <div class="text">S</div>
+            <div class="text">T</div>
+        </h1>
 
         <div class="pageshow-wrapper">
-            <h1>
-                <div class="text">S</div>
-                <div class="text">A</div>
-                <div class="text">E</div>
-                <div class="text apo">'</div>
-                <div class="text">s</div>
-                <div class="space"></div>
-
-                <div class="text">L</div>
-                <div class="text">I</div>
-                <div class="text">S</div>
-                <div class="text">T</div>
-            </h1>
-
             <div class="zoneFiltres">
-                <div class="filter-wrapper">
-                    <input type="checkbox" name="FiltreS1" id="S1">
-                    <label class="semestres" for="S1">Semestre 1</label>
-
-                    <input type="checkbox" name="FiltreS2" id="S2">
-                    <label class="semestres" for="S2">Semestre 2</label>
-
-                    <input type="checkbox" name="FiltreS3" id="S3">
-                    <label class="semestres" for="S3">Semestre 3</label>
-
-                    <input type="checkbox" name="FiltreS4" id="S4">
-                    <label class="semestres" for="S4">Semestre 4</label>
-                </div>
 
                 <main>
                     <div class="carousel-slideL">
                         <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24" fill="none"
                             stroke="#ffffff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
                             <circle cx="12" cy="12" r="10" />
-                            <path d="M12 8l4 4-4 4M8 12h7" />
+                            <path d="M12 8l-4 4 4 4M16 12H9" />
                         </svg>
                     </div>
                     <div class="carousel">
