--- a/S1/TD1/TD 1/Version modif/index.html
+++ b/S1/TD1/TD 1/Version modif/index.html
@@ -170,8 +170,8 @@
 					</tr>
 					
 					  <tr>
-						<td>Eckes</td>
-						<td>Alex</td>
+						<td>John</td>
+						<td>Doe</td>
 						<td>18</td>
 					  </tr>
 					</table>
