--- a/S1/TD2/index.html
+++ b/S1/TD2/index.html
@@ -28,7 +28,7 @@
     </section>
 
     <div class="Welcome2">
-        <p>My name is <span class="purple">Alex ECKES</span>, I'm in the MMI section of the <span class="purple">Mulhouse's University Institute of Technology</span>.</p>
+        <p>My name is <span class="purple">Alex</span>, I'm in the MMI section of the <span class="purple">Mulhouse's University Institute of Technology</span>.</p>
         <p>I'm a <span class="purple">18yo student</span> who loves to <span class="purple">learn new things</span>. My hobbies are doing sport, playing video games, makin' music and stuff,</p>
         <p>playin' music instruments too like the electric guitar and synthetizers</p>
     </div>
