--- a/S1/TP2/index.html
+++ b/S1/TP2/index.html
@@ -13,7 +13,7 @@
         <div class="logo">
         <a href="#">
         <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="3" width="7" height="7"></rect><rect x="14" y="3" width="7" height="7"></rect><rect x="14" y="14" width="7" height="7"></rect><rect x="3" y="14" width="7" height="7"></rect></svg>
-        <b>Square</b></a>
+        Square</a>
         </div>
 
         <nav class="onglets">
@@ -61,7 +61,5 @@
             </div>
     </footer>
     <!--Fin Deuxième block du site-->
-
-    <script>alert("Bienvenue sur mon super site !")</script>
 </body>
 </html>
