--- a/S4/Front-End/TD1-Requêtes-asynchrones-Fetch/index.html
+++ b/S4/Front-End/TD1-Requêtes-asynchrones-Fetch/index.html
@@ -6,7 +6,7 @@
     <title>TD1</title>
 </head>
 <body>
-    <div>Pushed</div>
+    <div></div>
     
     <script src="index.js"></script>
 </body>
