--- a/S4/Front-End/TD1-Requêtes-asynchrones-Fetch/second-try/index.html
+++ b/S4/Front-End/TD1-Requêtes-asynchrones-Fetch/second-try/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TD1</title>
+    <link rel="stylesheet" href="stylesheet/index.css">
 </head>
 <body>
-    
+    <main></main>
+
+    <script src="js/index.js"></script>
 </body>
 </html>
