--- a/S4/Front-End/TD1-Requêtes-asynchrones-Fetch/second-try/index.html
+++ b/S4/Front-End/TD1-Requêtes-asynchrones-Fetch/second-try/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="stylesheet/index.css">
 </head>
 <body>
-    <main></main>
+    <div></div>
 
     <script src="js/index.js"></script>
 </body>
