--- a/S4/Front-End/TD1-Requêtes-asynchrones-Fetch/second-try/index.html
+++ b/S4/Front-End/TD1-Requêtes-asynchrones-Fetch/second-try/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="stylesheet/index.css">
 </head>
 <body>
-    <div></div>
+    <h2>1</h2>
+    <div id="one"></div>
+    <br><br><br><br>
+    <h2>2</h2>
+    <div id="two"></div>
 
     <script src="js/index.js"></script>
 </body>
