--- a/S4/Design-Interactif/TD5/canvas.html
+++ b/S4/Design-Interactif/TD5/canvas.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="stylesheet/index.css">
 </head>
 <body>
-
+    <canvas id="canvApp" width="" height="">
+    </canvas>
+    <div class="cube"></div>
     
     <script src="js/app.js"></script>
 </body>
