--- a/S4/Front-End/TD2-Modèle-de-contenus/index.html
+++ b/S4/Front-End/TD2-Modèle-de-contenus/index.html
@@ -8,7 +8,7 @@
 <body>
     <main></main>
 
-    
-    <script src="/js/index.js"></script>
+
+    <script src="js/index.js"></script>
 </body>
 </html>
