--- a/S4/Front-End/TP2-Entrainements-Stockages/index.html
+++ b/S4/Front-End/TP2-Entrainements-Stockages/index.html
@@ -20,7 +20,9 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<h1>Car il faut un titre !</h1>
+		<h1>Bonjour M.aligator</h1>
+
+		<main></main>
 
 		<script>
 			/* Le SW en premier pour éviter les problèmes */
@@ -28,7 +30,7 @@
 				navigator.serviceWorker.register('sw.js');
 			}
 		</script>
-		<script src="js/script.js"></script>
+		<script src="js/index.js"></script>
 
 	</body>
 </html>
