--- a/S4/Front-End/TP2-Entrainements-Stockages/index.html
+++ b/S4/Front-End/TP2-Entrainements-Stockages/index.html
@@ -3,9 +3,10 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width">
-		<meta name="description" content="Ceci est une PWA">
+		<meta name="description" content="TP2 Entrainements">
 		<meta name="theme-color" content="#669900">
 		<link rel="manifest" href="manifest.json">
+		<link rel="stylesheet" href="stylesheet/style.css">
 		<title>PWA</title>
 		
 		<style>
