--- a/S4/Front-End/TP2-Entrainements-Stockages/index.html
+++ b/S4/Front-End/TP2-Entrainements-Stockages/index.html
@@ -23,7 +23,9 @@
 	<body>
 		<h1>Bonjour M.aligator</h1>
 
-		<main></main>
+		<main>
+			
+		</main>
 
 		<script>
 			/* Le SW en premier pour éviter les problèmes */
